# Ai-videos

./: .env.example  .gitignore  Dockerfile  SELLING.md  pyproject.toml
scripts/: make_avatar.py  peek_db.py  post_one_video.py  retire_stub_videos.py  run_one_video.py  show_scripts.py  upload_longform.py
src/: config.py  discovery.py  scheduler.py
src/classification/: __init__.py  classifier.py  schema.py
src/dashboard/: __init__.py  app.py  queries.py
src/db/: init.py  logging.py  models.py  session.py
src/feedback/: __init__.py  aggregator.py  collector.py  provider.py  runner.py
src/generation/: __init__.py  generator.py  runner.py  schema.py  selector.py
src/longform/: __init__.py  assemble.py  runner.py  schema.py  script.py  stock.py  thumbnail.py  voiceover.py
src/posting/: __init__.py  authorize.py  metadata.py  publisher.py  runner.py
src/qa/: __init__.py  checker.py  mp4.py  runner.py
src/sources/: __init__.py  _retry.py  base.py  google_trends.py  reddit.py  runner.py  youtube.py
src/video/: __init__.py  generator.py  prompt.py  provider.py  runner.py
tests/: conftest.py  test_classifier.py  test_dashboard.py  test_discovery.py  test_feedback.py  test_generation.py  test_longform.py  test_posting.py  test_qa.py  test_sources.py  test_video.py
