[project]
name = "ai-video-creator"
version = "0.1.0"
description = "Automated AI trend video pipeline — Phase 1: trend discovery"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "pydantic>=2.6.0",
    "pytrends>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]

# This is an application, not a library — uv installs only the dependencies,
# not the project itself. Modules are run with `src` on PYTHONPATH.
[tool.uv]
package = false
